替换 semantic-ui 字体引用为国内镜像

--- a/sample/app/views/home/index.html.haml
+++ b/sample/app/views/home/index.html.haml
@@ -15,5 +15,6 @@
                 %tr
                   %td 滑块开关
                   %td
-                    %a{href: demo_switch_path} Switch
+                    %i.icon.add
+                    Switch
         
