--- a/sample/app/views/layouts/application.html.haml
+++ b/sample/app/views/layouts/application.html.haml
@@ -1,13 +1,15 @@
 !!!
-%html{:lang => :zh}
+%html{ lang: "zh" }
   %head
-    %meta{:'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}
-    %meta{:name => 'viewport', :content => 'width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'}
+    %meta{ content: "text/html; charset=utf-8", http:{ equiv: "Content-Type" } }
+    %meta{ content: "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", name: "viewport"}
 
     %title lily components
+
     = csrf_meta_tags
-    = stylesheet_link_tag 'application', :media => 'screen'
-    = javascript_include_tag 'application'
+
+    = stylesheet_link_tag :application, :'data-turbolinks-track' => true
+    = javascript_include_tag :application, :'data-turbolinks-track' => true
 
   %body
     = yield
